# rag-markdown-cleaner

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  README.md  clean_auto_run.py  development_log.md  prompt.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  一键安装.bat  一键菜单.bat  使用说明.md  停止.bat  暂停.bat  继续.bat
.github/workflows/: ci.yml
clean_auto/: __init__.py  __main__.py  api_client.py  assembly.py  batch_manifest.py  chunking.py  config.py  control.py  locking.py  metadata_schema.py  model_budget.py  pipeline.py  processor.py  progress.py  quality.py  quality_settings.py  scheduler.py  selection.py  validation.py
docs/roadmap/: next-concurrency-and-progress.md
docs/tasks/: p0.1-powershell-auto-resume-tests.md
scripts/: install_environment.ps1  menu.ps1  powershell_missing.txt  select_input_files.ps1
tests/: test_api_client.py  test_assembly.py  test_batch_manifest.py  test_chunking.py  test_config_security.py  test_control.py  test_encoding.py  test_installer.py  test_launcher.py  test_locking.py  test_log_paths.py  test_metadata_schema.py  test_model_budget.py  test_pipeline.py  test_processor.py  test_progress.py  test_quality_settings.py  test_recovery.py  test_scheduler.py  test_selection.py  test_validation_quality.py  test_version.py  test_whitespace_integrity.py
