[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-cleaner"
version = "1.2.0"
description = "RAG Markdown 批量清洗工具"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27.0",
  "python-dotenv>=1.0.0",
  "PyYAML>=6.0",
]

[project.scripts]
rag-cleaner = "clean_auto.pipeline:run"

[tool.setuptools.packages.find]
include = ["clean_auto*"]
