[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-cleaner"
version = "1.7.5"
description = "面向中级注册安全工程师 AI 学习知识库的 Markdown 批量清洗工具"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27.0,<1.0",
  "python-dotenv>=1.0.0,<2.0",
  "PyYAML>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<10",
  "ruff>=0.9,<1.0",
]

[project.scripts]
rag-cleaner = "clean_auto.pipeline:run"

[tool.setuptools.packages.find]
include = ["clean_auto*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
  "E9",
  "F63",
  "F7",
  "F82",
]
